# FYS5429

./: README.md
Project1XPINNs/: README.md  References.bib  config.tex  main.tex  pyproject.toml  requirements.txt
Project1XPINNs/copy/: advection_dev_script.py
Project1XPINNs/data/: XPINN_template.json  XPINN_template_test_w_temporal.json  XPINN_template_w_temporal.json  advection_constraints.json  advection_constraints.txt  advection_constraints_test.json  navier_stockes_pinn_train.json  navier_stockes_pinn_train_w_temporal.json  navier_stokes_pinn_train.json  navier_stokes_pinn_train_w_temporal.json  navier_stokes_test.json  poisson_overlap_test.json  poisson_overlap_train.json  poisson_single_pinn_smooth_test.json  poisson_single_pinn_smooth_train.json  poisson_single_pinn_train.json  poisson_smooth_test.json  poisson_smooth_train.json  poisson_train.json  test_advection_simple.json  test_decomp_200.json  train_advection.json  (+1 more)
Project2TSP/: README.md  References.bib  config.tex  main.tex  pyproject.toml
Project2TSP/_src/: BHOSLIB_utils.py  TSP.py  gcn.py  graph_playground.ipynb  graph_playground.py  graph_utils.py  hamiltonian_cycle.py  main_hamiltonian_cycle.ipynb  main_vertex_cover.ipynb  matrix_helper.py  mvc_rcparams.mplstyle  plot_utils.py  utils.py  vertex_cover.py  vertex_cover_A.py  vertex_cover_utils.py
Project2TSP/tests/: test_vertex_cover.py
Project2TSP/text/: 0_abstract.tex  1_intro.tex  1_introduction.tex  2_theory.tex  3_method.tex  4_results.tex  5_conclusion.tex  5_discussion.tex
Project2TSP/text/tikz/: cnn.tikz  gcn.tikz
(+352 files in other folders)
